# ToolsManager

./: .gitignore  README.md
DWNetCore/DWNetCore/: DWNetCore.sln
DWWork/: DWWork.CSharp.Editor.Plugins.csproj  DWWork.CSharp.Editor.csproj  DWWork.CSharp.Plugins.csproj  DWWork.CSharp.csproj  DWWork.Editor.Plugins.csproj  DWWork.Editor.csproj  DWWork.Plugins.csproj  DWWork.csproj  DWWork.sln  DWWork.userprefs  buildDll.bat  cleanup.bat  cry_gameData.bat  encrypte.py  trunk.userprefs  utilentry.py
DWWork/Assets/: FMODStudioCache.asset  uiltlas.cs
DWWork/BuildTools/: buildAPK.bat  buildAPK_After.bat  buildAPK_Before.bat  编译Android开发版本(Debug).bat  编译Android版本.bat  编译PC x64版本.bat  编译PC x86版本.bat
DWWork/Config/Android/: Android  (+15 more)
DWWork/PluginLibs/CppCodes/XGame2/XGame2.Android/: CMakeLists.txt  android_build_readme.txt
DWWork/PluginLibs/CppCodes/XGame2/XGame2.Android/source/: .classpath  .project  AndroidManifest.xml
DWWork/PluginLibs/CppCodes/XGame2/XGame2.Android/source/jni/: Android.mk  Application.mk  build.bat  copy.bat
DWWork/PluginLibs/CppCodes/XGame2/XGame2.Android/source/src/com/ezfun/main_activity/: EZfunMainActivity.java
DWWork/PluginLibs/CppCodes/XGame2/XGame2.Win/: CMakeLists.txt  build.bat
DWWork/PluginLibs/CppCodes/XGame2/XGame2.iOS/: CMakeLists.txt
DWWork/ProjectSettings/: AudioManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset
DWWork/tools/: EZSDK.bat  EZSDK.py  GameData_All.json  build.sh  build538.sh  build55.sh  buildEZSDK.sh  build_pack.bat  build_pack.py  build_pack.sh  daily.sh  dw20170816.keystore  ezsdkplatform.py  fileutil.py  iosType.json  lljxqp20171102.keystore  switch_gamedata.py  签名说明.txt
GameCore/: GameCore.sln
GameCore/GameCore/: GameCore.csproj
ThirtyEditor/Editor/: BuildDll.cs  BuildTools.cs  CSharpTemplateEditor.cs  CheckEffect.cs  CheckResourceStaticRef.cs  CodeLabelEditor.cs  EditorUtils.cs  GenUpdatePack.cs  PrefabLabelEditor.cs  ResourceCheckers.cs  ScriptReplace.cs
ThrityTools/: ThrityTools.sln
(+6810 files in other folders)
